# AutoGenesis

./: .gitignore  LOOP_STATE.md  README.md  SKILL.md  VISION.md  conftest.py  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
autogenesis/: __init__.py  api.py
autogenesis/genome/: __init__.py  adapters.py  content.py  extraction.py  schema.py  validation.py
autogenesis/governance/: __init__.py  ledger.py
autogenesis/synthesis/: __init__.py  diagnosis.py  repair.py
autogenesis/twin/: __init__.py  feasibility.py
autogenesis/verify/: __init__.py  _smt.py  certificate.py  formal.py  safety.py  spec.py
examples/: rrbot.py
media/commercial/: README.md
tests/: test_api_e2e.py  test_branched_hierarchy.py  test_feasibility.py  test_formal_lifo.py  test_formal_symbolic.py  test_genome.py  test_governance.py  test_synthesis.py  test_verify.py
