[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autogenesis"
version = "1.0.0"
description = "A platform-agnostic, proof-carrying substrate for verified robot maintenance & replication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["z3-solver>=4.12"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["autogenesis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
